package com.example.cinema.model.enums;

public enum BookingStatus {
    PENDING, CONFIRMED, CANCELLED, CHECKED_IN
}
