package com.example.cinema.model.enums;

public enum Role {
    ADMIN, MANAGER, STAFF, CUSTOMER
}
