package com.example.cinema.model.enums;

public enum MembershipTier {
    STANDARD, SILVER, GOLD, PLATINUM
}
